Add Vercel configuration for deployment, enhance README with deployment instructions, and refactor frontend script for improved functionality

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev": "node --watch backend/index.js",
     "start": "node backend/index.js",
     "build": "tsc",
+    "vercel-build": "echo 'Vercel build completed'",
     "test": "vitest",
     "lint": "eslint . --ext .js,.ts",
     "format": "prettier --write .",
