Add environment configuration for Vercel deployment, enhance .gitignore for build artifacts, and implement CI/CD pipeline for real-time deployment

--- a/package.json
+++ b/package.json
@@ -3,15 +3,17 @@
   "version": "1.0.0",
   "description": "AI 기반으로 시작하여 무한한 웹 자동화 가능성을 제공하는 혁신적인 브라우저 에이전트",
   "type": "module",
-  "main": "backend/index.js",
+  "main": "api/index.js",
   "scripts": {
-    "dev": "node --watch backend/index.js",
-    "start": "node backend/index.js",
+    "dev": "node --watch api/index.js",
+    "start": "node api/index.js",
     "build": "tsc",
-    "vercel-build": "echo 'Vercel build completed'",
+    "vercel-build": "npx playwright install chromium --with-deps && echo 'Vercel build completed'",
+    "postinstall": "npx playwright install chromium --with-deps",
     "test": "vitest",
     "lint": "eslint . --ext .js,.ts",
     "format": "prettier --write .",
+    "format:check": "prettier --check .",
     "playwright:install": "playwright install",
     "playwright:test": "playwright test"
   },
