--- a/.gitignore
+++ b/.gitignore
@@ -91,3 +91,16 @@ logs
 
 # Screenshots
 screenshots/
+
+# Vercel
+.vercel
+
+# Playwright
+test-results/
+playwright-report/
+playwright/.cache/
+
+# Environment files
+.env
+.env.local
+.env.production
