Update Vercel build process: simplify vercel-build command, add Playwright configuration for browser handling in Vercel environment, and specify build and install commands in vercel.json

--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "dev": "node --watch api/index.js",
     "start": "node api/index.js",
     "build": "tsc",
-    "vercel-build": "npx playwright install chromium --with-deps && echo 'Vercel build completed'",
-    "postinstall": "npx playwright install chromium --with-deps",
+    "vercel-build": "echo 'Vercel build completed'",
     "test": "vitest",
     "lint": "eslint . --ext .js,.ts",
     "format": "prettier --write .",
