--- a/vercel.json
+++ b/vercel.json
@@ -13,5 +13,7 @@
   ],
   "env": {
     "NODE_ENV": "production"
-  }
+  },
+  "buildCommand": "npm run vercel-build",
+  "installCommand": "npm install --ignore-scripts"
 }
