Add HTML and JavaScript files for the Browser AI Agent interface, enhance .gitignore for Playwright configuration, and update Vercel routing for static file serving.

--- a/vercel.json
+++ b/vercel.json
@@ -7,8 +7,12 @@
   },
   "routes": [
     {
+      "src": "/api/(.*)",
+      "dest": "/api/index.js"
+    },
+    {
       "src": "/(.*)",
-      "dest": "api/index.js"
+      "dest": "/index.html"
     }
   ],
   "env": {
